Use lz4-java and xxhash32